[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/EstacionRecarga/AreaAtraccion.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/EstacionRecarga/EstacionRecarga.png" type="Texture" id=2]
[ext_resource path="res://Juego/EstacionRecarga/vacio.tres" type="AudioStream" id=3]
[ext_resource path="res://Juego/EstacionRecarga/cargando.tres" type="AudioStream" id=4]
[ext_resource path="res://Juego/EstacionRecarga/EstacionRecarga.gd" type="Script" id=5]
[ext_resource path="res://Juego/UI/HUD/Kenney Future2.ttf" type="DynamicFontData" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 75.0
height = 118.0

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaColision:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaColision:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AreaRecarga:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AreaRecarga:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "estacionLista"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AreaColision:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AreaRecarga:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0, 2.1, 4.1, 5.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.631373 ), Color( 1, 1, 1, 0.776471 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AreaRecarga:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0249796, 2.1, 4.1, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.95, 0.95 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 19
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0117647, 0.568627, 0.0352941, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.678431, 0.176471, 0.176471, 1 )

[node name="EstacionRecarga" type="Node2D" groups=["minimap"]]
z_index = 39
z_as_relative = false
script = ExtResource( 5 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 1 )

[node name="SpriteEstacion" type="Sprite" parent="AreaColision"]
z_index = 1
texture = ExtResource( 2 )

[node name="AreaRecarga" parent="." instance=ExtResource( 1 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 3 )
anims/estacionLista = SubResource( 4 )

[node name="CargaSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.237
bus = "Estacion"

[node name="VacioSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Estacion"

[node name="BarraEnergia" type="ProgressBar" parent="."]
margin_left = -60.0
margin_top = -240.0
margin_right = 60.0
margin_bottom = -212.0
custom_fonts/font = SubResource( 5 )
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )
value = 80.0
rounded = true

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="body_entered" from="AreaRecarga" to="." method="_on_AreaRecarga_body_entered"]
[connection signal="body_exited" from="AreaRecarga" to="." method="_on_AreaRecarga_body_exited"]
